--- a/train_models.ipynb
+++ b/train_models.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,8 +206,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W0621 21:28:34.268955 14980 training_utils.py:1353] Expected a shuffled dataset but input dataset `x` is not shuffled. Please invoke `shuffle()` on input dataset.\n",
-      "W0621 21:28:34.341790 14980 tf_logging.py:161] Model failed to serialize as JSON. Ignoring... \n"
+      "W0623 15:55:35.973358 12892 training_utils.py:1353] Expected a shuffled dataset but input dataset `x` is not shuffled. Please invoke `shuffle()` on input dataset.\n",
+      "W0623 15:55:36.222787 12892 tf_logging.py:161] Model failed to serialize as JSON. Ignoring... \n"
      ]
     },
     {
@@ -215,50 +215,22 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      " 1/20 [>.............................] - ETA: 2:33 - loss: 5.8379 - psnr_tf: -6.6579"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W0621 21:28:42.690458 14980 callbacks.py:236] Method (on_train_batch_end) is slow compared to the batch update (0.202476). Check your callbacks.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 2/20 [==>...........................] - ETA: 1:15 - loss: 3.4289 - psnr_tf: -2.9330"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W0621 21:28:42.760271 14980 callbacks.py:236] Method (on_train_batch_end) is slow compared to the batch update (0.181550). Check your callbacks.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19/20 [===========================>..] - ETA: 47s - loss: 2.5048 - psnr_tf: -0.9582 - ETA: 33s - loss: 1.9969 - psnr_tf: 0.303 - ETA: 25s - loss: 1.6836 - psnr_tf: 1.07 - ETA: 20s - loss: 1.4455 - psnr_tf: 1.96 - ETA: 16s - loss: 1.3108 - psnr_tf: 2.17 - ETA: 13s - loss: 1.1800 - psnr_tf: 2.67 - ETA: 10s - loss: 1.0655 - psnr_tf: 3.32 - ETA: 8s - loss: 0.9781 - psnr_tf: 3.7442 - ETA: 7s - loss: 0.9038 - psnr_tf: 4.137 - ETA: 5s - loss: 0.8438 - psnr_tf: 4.431 - ETA: 4s - loss: 0.7910 - psnr_tf: 4.727 - ETA: 3s - loss: 0.7501 - psnr_tf: 4.897 - ETA: 3s - loss: 0.7145 - psnr_tf: 5.049 - ETA: 2s - loss: 0.6785 - psnr_tf: 5.286 - ETA: 1s - loss: 0.6442 - psnr_tf: 5.591 - ETA: 1s - loss: 0.6162 - psnr_tf: 5.765 - ETA: 0s - loss: 0.5908 - psnr_tf: 5.9322\n",
+      "19/20 [===========================>..] - ETA: 1:56 - loss: 0.0978 - psnr_tf: 10.32 - ETA: 57s - loss: 0.0972 - psnr_tf: 10.4201 - ETA: 36s - loss: 0.1054 - psnr_tf: 10.131 - ETA: 25s - loss: 0.1045 - psnr_tf: 10.134 - ETA: 19s - loss: 0.0983 - psnr_tf: 10.423 - ETA: 15s - loss: 0.0924 - psnr_tf: 10.734 - ETA: 12s - loss: 0.0962 - psnr_tf: 10.604 - ETA: 8s - loss: 0.0898 - psnr_tf: 10.946 - ETA: 6s - loss: 0.0872 - psnr_tf: 11.07 - ETA: 5s - loss: 0.0865 - psnr_tf: 11.11 - ETA: 4s - loss: 0.0842 - psnr_tf: 11.23 - ETA: 3s - loss: 0.0814 - psnr_tf: 11.42 - ETA: 2s - loss: 0.0795 - psnr_tf: 11.54 - ETA: 2s - loss: 0.0787 - psnr_tf: 11.58 - ETA: 1s - loss: 0.0775 - psnr_tf: 11.63 - ETA: 1s - loss: 0.0757 - psnr_tf: 11.74 - ETA: 0s - loss: 0.0751 - psnr_tf: 11.77 - ETA: 0s - loss: 0.0741 - psnr_tf: 11.8186\n",
       "Epoch 00001: saving model to ./weights/EDSR_Baseline_X3.h5\n",
-      "20/20 [==============================] - 10s 511ms/step - loss: 0.5670 - psnr_tf: 6.1199 - val_loss: 0.1163 - val_psnr_tf: 9.6231\n",
+      "20/20 [==============================] - 8s 411ms/step - loss: 0.0725 - psnr_tf: 11.9326 - val_loss: 0.0542 - val_psnr_tf: 13.1101\n",
       "Epoch 2/2\n",
-      "19/20 [===========================>..] - ETA: 1s - loss: 0.0946 - psnr_tf: 10.63 - ETA: 1s - loss: 0.1453 - psnr_tf: 9.0496 - ETA: 1s - loss: 0.1401 - psnr_tf: 9.113 - ETA: 1s - loss: 0.1250 - psnr_tf: 9.642 - ETA: 0s - loss: 0.1228 - psnr_tf: 9.669 - ETA: 0s - loss: 0.1219 - psnr_tf: 9.643 - ETA: 0s - loss: 0.1210 - psnr_tf: 9.646 - ETA: 0s - loss: 0.1173 - psnr_tf: 9.771 - ETA: 0s - loss: 0.1200 - psnr_tf: 9.697 - ETA: 0s - loss: 0.1238 - psnr_tf: 9.581 - ETA: 0s - loss: 0.1221 - psnr_tf: 9.624 - ETA: 0s - loss: 0.1180 - psnr_tf: 9.786 - ETA: 0s - loss: 0.1184 - psnr_tf: 9.752 - ETA: 0s - loss: 0.1184 - psnr_tf: 9.731 - ETA: 0s - loss: 0.1170 - psnr_tf: 9.770 - ETA: 0s - loss: 0.1152 - psnr_tf: 9.842 - ETA: 0s - loss: 0.1190 - psnr_tf: 9.724 - ETA: 0s - loss: 0.1193 - psnr_tf: 9.707 - ETA: 0s - loss: 0.1169 - psnr_tf: 9.8027\n",
+      "19/20 [===========================>..] - ETA: 1s - loss: 0.0427 - psnr_tf: 14.56 - ETA: 0s - loss: 0.0664 - psnr_tf: 12.79 - ETA: 0s - loss: 0.0633 - psnr_tf: 12.77 - ETA: 0s - loss: 0.0547 - psnr_tf: 13.57 - ETA: 0s - loss: 0.0526 - psnr_tf: 13.65 - ETA: 0s - loss: 0.0529 - psnr_tf: 13.54 - ETA: 0s - loss: 0.0513 - psnr_tf: 13.62 - ETA: 0s - loss: 0.0492 - psnr_tf: 13.79 - ETA: 0s - loss: 0.0490 - psnr_tf: 13.81 - ETA: 0s - loss: 0.0498 - psnr_tf: 13.73 - ETA: 0s - loss: 0.0487 - psnr_tf: 13.80 - ETA: 0s - loss: 0.0473 - psnr_tf: 13.94 - ETA: 0s - loss: 0.0478 - psnr_tf: 13.87 - ETA: 0s - loss: 0.0467 - psnr_tf: 13.94 - ETA: 0s - loss: 0.0459 - psnr_tf: 14.00 - ETA: 0s - loss: 0.0463 - psnr_tf: 13.96 - ETA: 0s - loss: 0.0462 - psnr_tf: 13.96 - ETA: 0s - loss: 0.0454 - psnr_tf: 14.0334\n",
       "Epoch 00002: saving model to ./weights/EDSR_Baseline_X3.h5\n",
-      "20/20 [==============================] - 2s 84ms/step - loss: 0.1164 - psnr_tf: 9.8166 - val_loss: 0.1081 - val_psnr_tf: 9.9161\n"
+      "20/20 [==============================] - 2s 76ms/step - loss: 0.0451 - psnr_tf: 14.0465 - val_loss: 0.0412 - val_psnr_tf: 14.0507\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<src.model.EDSR.EDSR_baseline at 0x29b8b951550>"
+       "<src.model.EDSR.EDSR_baseline at 0x11c19ed7828>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,6 +242,84 @@
     "          steps_per_epoch=20,\n",
     "          batch_size=16,\n",
     "          use_wn=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Model's Info**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_1 (InputLayer)            [(None, None, None,  0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d (Conv2D)                 (None, None, None, 6 1792        input_1[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "res0 (_ResBlock)                (None, None, None, 6 73856       conv2d[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "res1 (_ResBlock)                (None, None, None, 6 73856       res0[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "res2 (_ResBlock)                (None, None, None, 6 73856       res1[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "res3 (_ResBlock)                (None, None, None, 6 73856       res2[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "res4 (_ResBlock)                (None, None, None, 6 73856       res3[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "res5 (_ResBlock)                (None, None, None, 6 73856       res4[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "res6 (_ResBlock)                (None, None, None, 6 73856       res5[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "res7 (_ResBlock)                (None, None, None, 6 73856       res6[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "res8 (_ResBlock)                (None, None, None, 6 73856       res7[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "res9 (_ResBlock)                (None, None, None, 6 73856       res8[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "res10 (_ResBlock)               (None, None, None, 6 73856       res9[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "res11 (_ResBlock)               (None, None, None, 6 73856       res10[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "res12 (_ResBlock)               (None, None, None, 6 73856       res11[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "res13 (_ResBlock)               (None, None, None, 6 73856       res12[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "res14 (_ResBlock)               (None, None, None, 6 73856       res13[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "res15 (_ResBlock)               (None, None, None, 6 73856       res14[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_33 (Conv2D)              (None, None, None, 6 36928       res15[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "add (Add)                       (None, None, None, 6 0           conv2d[0][0]                     \n",
+      "                                                                 conv2d_33[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "subpixel_layer (SubpixelLayer)  (None, None, None, 6 332352      add[0][0]                        \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_35 (Conv2D)              (None, None, None, 3 1731        subpixel_layer[0][0]             \n",
+      "__________________________________________________________________________________________________\n",
+      "mean_shift_1 (MeanShift)        (None, None, None, 3 0           conv2d_35[0][0]                  \n",
+      "==================================================================================================\n",
+      "Total params: 1,554,499\n",
+      "Trainable params: 1,554,499\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.model.summary()"
    ]
   },
   {
